--- a/05-azure-kubernetes-cluster-iaac-pipeline.yml
+++ b/05-azure-kubernetes-cluster-iaac-pipeline.yml
@@ -25,3 +25,12 @@ steps:
     backendAzureRmContainerName: 'storageaccountaadii'
     backendAzureRmKey: 'kubernetes-dev.tfstate'
     allowTelemetryCollection: true
+
+- task: TerraformCLI@2
+  inputs:
+    command: 'apply'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/azure/kubernetes'
+    environmentServiceName: 'arm-service-connection'
+    commandOptions: '-var client_id=$(client_id) -var client_secret=$(client-secret) -var ssh_public_keys=$(publicKey.secureFilePath)'
+
+   
